swagger student endpoint
